testing/framework/resources/Advanced/Failing/mondrian/query853.q
select store.store_state as c0, store.store_country as c1, store.store_city as c2, store.store_postal_code as c3, store.store_name as c4, store.store_type as c5, store.store_manager as c6, store.store_sqft as c7, store.coffee_bar as c8, store.store_street_address as c9 from store as store group by store.store_state, store.store_country, store.store_city, store.store_postal_code, store.store_name, store.store_type, store.store_manager, store.store_sqft, store.coffee_bar, store.store_street_address order by store.store_state ASC NULLS LAST, store.store_city ASC NULLS LAST, store.store_name ASC NULLS LAST;
